fix overflow issue

--- a/resources/assets/sass/sidebar.scss
+++ b/resources/assets/sass/sidebar.scss
@@ -40,7 +40,7 @@ body {
 .slideout-open,
 .slideout-open body,
 .slideout-open .slideout-panel {
-  overflow: hidden;
+  overflow-y: hidden;
 }
 
 .slideout-open .slideout-panel {
